--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,4 +1,3 @@
-${project.parent.artifactId}.title=Event Based Billing Module
+${project.parent.artifactId}.title=Billable Objects Module
 
 ${project.parent.artifactId}.admin.handlers=Manage Billing Handlers
-${project.parent.artifactId}.admin.associators=Manage Bill Associators
